--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "atomic-spinner": "^1.2.5",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "react": "^18.0.0",
@@ -42,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:8800/api"
+  },
+  "proxy": "http://localhost:8800/api"
 }
